# cnn-text

./: .gitignore  Cargo.toml  README.md  cnn-text.toml  experiment-imdb.toml  experiment-sms.toml  experiment.toml
data/: dataset.csv
src/: data.rs  datasets.rs  fetch.rs  infer.rs  main.rs  model.rs  sweep.rs  training.rs
src/model/: bigru.rs  cnn-text.rs  fast-text.rs  kimcnn.rs  mod.rs  transformer.rs
