[package]
name    = "cnn-text"
version = "0.1.0"
edition = "2024"

[dependencies]
burn       = { version = "0.20.1", features = ["train", "ndarray"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── GPU option ──────────────────────────────────────────────────────────────
# Swap the burn line above for this to run on GPU via WebGPU:
# burn = { version = "0.20.1", features = ["train", "wgpu"] }

[profile.dev]
opt-level = 1
