[package]
name    = "cnn-text"
version = "0.1.0"
edition = "2024"

[dependencies]
burn       = { version = "0.20.1", features = ["train", "ndarray"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
ureq       = "3"
ahash      = "0.8"
zip        = { version = "2", default-features = false, features = ["deflate"] }

# ── Backend feature flags ────────────────────────────────────────────────────
# ndarray is always present (Burn uses it internally for metric sync).
# Enable the `gpu` feature (default) to also compile wgpu for training.
[features]
default = ["gpu"]
gpu     = ["burn/wgpu"]

[profile.dev]
opt-level = 1
